[gd_scene load_steps=4 format=3 uid="uid://de8magnv6cqh"]

[ext_resource type="Script" path="res://Menu Scripts/HowToPlayMenu.gd" id="1_5aeok"]
[ext_resource type="Texture2D" uid="uid://bigyq2e3038tk" path="res://icon.svg" id="2_grg4f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dbnrp"]
bg_color = Color(0.414273, 0.150836, 0.54012, 1)

[node name="HowToPlayMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5aeok")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1160.0
offset_bottom = 655.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dbnrp")

[node name="NextButton" type="Button" parent="."]
layout_mode = 0
offset_left = 666.0
offset_top = 574.0
offset_right = 733.0
offset_bottom = 624.0
text = "Next"

[node name="LastButton" type="Button" parent="."]
layout_mode = 0
offset_left = 462.0
offset_top = 576.0
offset_right = 528.0
offset_bottom = 623.0
text = "Last"

[node name="ExplanationPicture" type="Sprite2D" parent="."]
position = Vector2(609, 373)
texture = ExtResource("2_grg4f")

[node name="ExplanationLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 16.0
offset_right = 1145.0
offset_bottom = 103.0

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 608.0
offset_right = 60.0
offset_bottom = 641.0
text = "<"

[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="LastButton" to="." method="_on_last_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
